@@ -1,0 +1,8 @@
+<?php
+/** Tahitian (Reo Mā`ohi)
+  *
+  * @addtogroup Language
+  */
+
+$fallback = 'fr';
+?>
